initial fix for overlapping events

--- a/src/components/molecules/ScheduleEvent/ScheduleEvent.scss
+++ b/src/components/molecules/ScheduleEvent/ScheduleEvent.scss
@@ -4,7 +4,7 @@ $ScheduleEvent--margin-top: 0.25rem;
 $ScheduleEvent--height: 3.75rem;
 $ScheduleEvent--padding: 0 0.25rem 0 0.75rem;
 $ScheduleEvent--border-radius: 18px;
-$ScheduleEvent--box-shadow: 0 5px 10px rgba(0, 0, 0, 0.65);
+$ScheduleEvent--box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.65);
 
 $bookmark--padding: 0.5rem;
 $bookmark-hover--padding-top: 0.375rem;
@@ -17,12 +17,12 @@ $description--margin-top: 2px;
   border-radius: $ScheduleEvent--border-radius;
   padding: $ScheduleEvent--padding;
   cursor: pointer;
-  height: $ScheduleEvent--height;
+  height: var(--event--height); // $ScheduleEvent--height;
   justify-content: space-between;
   align-items: center;
   background-color: $secondary--schedule-event;
   box-shadow: $ScheduleEvent--box-shadow;
-  margin-top: $ScheduleEvent--margin-top;
+  margin-top: var(--event--margin-top); // $ScheduleEvent--margin-top;
   margin-left: var(--event--margin-left);
   width: var(--event--width);
 
